# IdegisModbus

./: 20210723 Tabla modbus 1.63.xlsm  README.md  hacs.json  idegis_pool_controls_package.yaml  idegis_pool_modbus.yaml  pyproject.toml
custom_components/idegis_modbus/: __init__.py  binary_sensor.py  button.py  client.py  config_flow.py  const.py  coordinator.py  descriptions.py  diagnostics.py  entity.py  manifest.json  number.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/idegis_modbus/translations/: es.json
tests/: test_client.py  test_config_flow.py  test_coordinator.py
