[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idegis-modbus-home-assistant"
version = "0.1.0"
description = "Home Assistant custom integration for Idegis pool controllers over Modbus"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

